Local database configuration added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# Это для развёртывания на Heroku
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
@@ -9,3 +11,17 @@ spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 server.port=${PORT:5000}
+
+
+
+
+
+# Это для локального развёртывания
+# Чтобы открыть БД, нужно перейти на http://localhost:8080/h2
+
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=admin
+#spring.datasource.password=admin
