--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.port=${PORT:5000}
 
 
 # Это для локального развёртывания
-# Чтобы открыть БД, нужно перейти на http://localhost:8080/h2
+# Чтобы открыть БД, нужно перейти на http://localhost:8080/console
 
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.h2.console.enabled=true
