--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 node/**/
 node/*
 node/**
+node_modules/**
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -59,3 +60,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 .idea/discord.xml
+src/main/resources/static/built/bundle.js
+package-lock.json
