--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
     "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
+    "start": "webpack --mode development --watch",
+    "build": "webpack --mode production",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
