--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
     "build": "webpack --mode development --watch",
+    "heroku": "npm run build"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
