--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   },
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
-    "build": "webpack --mode development --watch",
-    "heroku": "npm run build"
+    "build": "webpack -d --watch",
+    "heroku": "npm run build",
+
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
