--- a/package.json
+++ b/package.json
@@ -1,37 +1,18 @@
 {
-  "name": "chat-app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "rest": "^1.3.1",
-    "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.1",
-    "simplebar-react": "^2.3.0"
+    "axios": "^0.18.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
-    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
-    "build": "webpack -d --watch",
-    "heroku": "npm run build",
-    "client-install": "npm install --prefix client",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "babel-loader": "^8.0.2",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0",
-    "react-router-dom": "^5.2.0",
-    "file-loader": "^6.1.1",
-    "image-webpack-loader": "^7.0.1",
-    "url-loader": "^4.1.1",
-    "css-loader": "^5.0.0",
-    "style-loader": "^2.0.0"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
