--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "simplebar-react": "^2.3.0"
   },
   "scripts": {
-    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
-    "build": "./target/classes/static/built/bundle.js"
+    "watch": "webpack --watch -d --output ./src/main/resources/static/built/bundle.js",
+    "build": "webpack -d --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
