--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "simplebar-react": "^2.3.0"
   },
   "scripts": {
-    "watch": "webpack --watch --progress --info-verbosity verbose -d --output ./src/main/resources/static/built/bundle.js"
+    "watch": "webpack --watch --progress --info-verbosity verbose -d --output ./src/main/resources/static/built/bundle.js",
+    "build": "./src/js/src/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
