--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "scripts": {
     "watch": "webpack --watch --progress --info-verbosity verbose -d --output ./src/main/resources/static/built/bundle.js",
-    "build": "webpack --output ./src/main/resources/static/built/bundle.js"
+    "start": "react-scripts start",
+    "build": "webpack --watch"
+
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
