--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "watch": "webpack --watch --progress --info-verbosity verbose -d --output ./src/main/resources/static/built/bundle.js",
-    "start": "react-scripts start",
+    "postinstall": "bower install",
     "build": "webpack --watch"
 
   },
