--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "rest": "^1.3.1",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
-    "simplebar-react": "^2.3.0"
+    "simplebar-react": "^2.3.0",
+    "axios": "^0.19.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "watch": "webpack --watch --progress --colors --config webpack.conf.js",
     "build": "webpack --watch"
-
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
